--- a/app/components/subSlider.module.css
+++ b/app/components/subSlider.module.css
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  align-items: center;
   background-color: rgba(255, 255, 255, 0.4);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 16px;
@@ -25,25 +26,34 @@
 
 /* 도시 네비게이션 */
 .cityNav {
-  width: 100%;
+  width: 80%;
   padding: 1rem 1.5rem 0;
   display: flex;
   justify-content: center;
-  overflow-x: auto;
-  overflow-y: hidden;
-  -webkit-overflow-scrolling: touch;
+  overflow: hidden;
   flex-shrink: 0;
 }
 
 .cityNavInner {
+  overflow-x: auto;
+  overflow-y: hidden;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
+  width: 100%;
   display: flex;
-  width: 80%;
   gap: 0.5rem;
   padding: 0.5rem 0;
-  transition: transform 0.3s ease;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.cityNavInner::-webkit-scrollbar {
+  display: none;
 }
 
 .cityNavItem {
+  scroll-snap-align: center;
   flex-shrink: 0;
   padding: 0.5rem 1rem;
   color: #4b5563;
@@ -52,6 +62,7 @@
   transition: all 0.3s ease;
   border-bottom: 1px solid transparent;
 }
+
 .cityNavItem.active {
   color: #ffb803b4;
   border-bottom-color: #ffb703;
@@ -162,7 +173,6 @@
     width: 80vw;
     padding: 2rem;
     height: 55dvh;
-    /* max-height: max-content; */
    }
 
    .contentWrapper {
@@ -174,21 +184,23 @@
 
    .cityNav {
     width: 150px;
-    height: 100%;
+    height: 300px;
     align-items: center;
-    overflow: hidden;
     padding-right: 1rem;
    }
 
    .cityNavInner {
-    height: 300px;
+    height: 100%;
     flex-direction: column;
     gap: 1rem;
+    overflow-x: hidden;
+    overflow-y: auto;
+    scroll-snap-type: y mandatory;
    }
 
    .cityNavItem {
     width: 100%;
-    height: 45px;
+    height: 80px;
     padding: 0 1rem;
     display: flex;
     justify-content: center;
