refactor: #6 Header 아이콘 `lucide-react` 로 변경
- `lucide-react` 아이콘 컴포넌트 적용
- 사이드바 배경색 투명도 조절

--- a/app/components/header.module.css
+++ b/app/components/header.module.css
@@ -180,7 +180,7 @@
   right: -200px; /* 초기에는 화면 밖으로 숨김 */
   width: 200px;
   height: 100vh;
-  background-color: #ffbb00; 
+  background-color: rgb(255, 187, 0, 0.8); 
   transition: right 0.3s ease-in-out; /* 부드러운 슬라이드 효과 */
   z-index: 10; /* AppBar보다 위에 오도록 */
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2); 
@@ -229,7 +229,6 @@
   text-decoration: none;
   padding: 12px 16px;
   font-size: 16px;
-  /* transition: background-color 0.3s ease, color 0.3s ease; */
   border-radius: 4px;
   color: #ffffff; /* 기본 글자색 */
 }
@@ -237,7 +236,7 @@
 /* 사이드바 버튼 호버 */
 .drawerLink:hover {
   width: 100%;
-  background-color: #ffffff; /* 호버 시 배경색 */
+  background-color: #ffffff;
   color: #ffbb00; /* 호버 시 글자색 */
 }
 .drawerLink:has(.drawerIcon):hover {
@@ -268,7 +267,6 @@
   justify-content: center;
   color: #ffffff;
   text-decoration: none;
-  transition: background-color 0.3s ease;
   font-size: 0.95em;
 }
 
