--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,13 @@
   unicode-range: U+1100-11FF, U+3130-318F, U+A960-A97F, U+AC00-D7A3, U+D7B0-D7FF;
 }
 
+@font-face {
+    font-family: "Paperlogy";
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/2408-3@1.0/Paperlogy-4Regular.woff2') format('woff2');
+    font-weight: 400;
+    font-display: swap;
+}
+
 :root {
   --background: #ffffff;
   /* --foreground: #171717; */
@@ -31,8 +38,7 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  /* 폰트 수정해야 하는 부분 2▼ */
-  font-family: "Paperlogy", "Pretendard", arial, Helvetica, sans-serif;
+  font-family: "Pretendard", "Paperlogy", arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
