feat: 도시 상세 페이지 및 관광 정보 카드 레이아웃 개선
- 반응형 레이아웃 구현
- 홈페이지, 지도 열기 기능 추가
- 인기 태그 레이아웃 수정 및 가로 스크롤 적용

--- a/app/(anon)/cities/[id]/components/chatButton.module.css
+++ b/app/(anon)/cities/[id]/components/chatButton.module.css
@@ -1,20 +1,20 @@
-.buttonWrap {
-  /* position: relative; */
-}
 .chatButton {
   display: block;
-  padding: 8px 16px;
+  padding: 0.5rem 1rem;
   background-color: white;
   color: #ffbb00;
   font-weight: bold;
   border: none;
   border-radius: 15px;
   cursor: pointer;
-  /* position: absolute; */
-  bottom: 3vh;
-  left: 70vw;
-  width: 150px;
-  height: 40px;
   box-shadow: 0 4px 8px #0000001a;
-  font-size: 18px;
+  font-size: 16px;
+}
+
+@media (min-width: 768px) {
+  .chatButton {
+    width: 150px;
+    height: 40px;
+    font-size: 18px;
+  }
 }
