--- a/app/(anon)/chatrooms/[id]/page.module.css
+++ b/app/(anon)/chatrooms/[id]/page.module.css
@@ -12,6 +12,10 @@
   margin-top: 1vh;
   margin-left: 24px;
   z-index: 10;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 .chatRoomContainer {
   width: 40vw;
